hphp/hack/test/full_fidelity/cases/concurrent/error/concurrent_complex_lval.php
<?hh

async function f() {
  concurrent {
    await genx($x->y = 42);
    await genx();
  }
}
